feat: add realtime market and industry strength
